# GPose

./: .gitignore  480_3.pcd  480_5.pcd  480_6.pcd  CMakeLists.txt  README.md  config.ini  global_pipeline.cpp  local_pipeline.cpp
CAD_models/: banana (复件).ply  banana.ply  obj_000010 (另一个复件).ply  obj_000010.ply  output.pcd
add_model/: CMakeLists.txt  README.md  bug_test.cpp  check_view_graph.cpp  normal_utility.cpp  offline_data_generation.cpp  render_synthetic_views.cpp  render_views_tesselated_sphere_modified.cpp  similar_object_recognition.cpp  view0.pcd  view_feature_score.cpp
data/: README.md
data/model_data/banana/: complete_model.pcd  feature_utilities.csv  global_features.pcd  graph.csv  normal_utilities.csv  relative_matrix.txt  view_utilities.csv
data/model_data/banana (0)/: complete_model.pcd  feature_utilities.csv  global_features.pcd  graph.csv  normal_utilities.csv  view_utilities.csv
data/model_data/banana (0)/distinguish_utilities/: Banana_distinguish_utilities.csv  banana_distinguish_utilities.csv  bun_zipper_distinguish_utilities.csv  joystick_distinguish_utilities.csv  obj_000001_distinguish_utilities.csv  obj_000010_distinguish_utilities.csv
data/model_data/banana (0)/local_features/: view0.pcd  view1.pcd  view10.pcd  view11.pcd  view12.pcd  view13.pcd  view14.pcd  view15.pcd  view16.pcd  view17.pcd  view18.pcd  view19.pcd  view2.pcd  view3.pcd  view4.pcd  view5.pcd  view6.pcd  view7.pcd  view8.pcd  view9.pcd
data/model_data/banana (0)/views/: view0.pcd  view1.pcd  view10.pcd  view11.pcd  view12.pcd  view13.pcd  view14.pcd  view15.pcd  view16.pcd  view17.pcd  view18.pcd  view19.pcd  view2.pcd  view3.pcd  view4.pcd  view5.pcd  view6.pcd  view7.pcd  view8.pcd  view9.pcd
data/model_data/banana (0)/views_original_pose/: view0.pcd  view1.pcd  view10.pcd  view11.pcd  view12.pcd  view13.pcd  view14.pcd  view15.pcd  view16.pcd  view17.pcd  view18.pcd  view19.pcd  view2.pcd  view3.pcd  view4.pcd  view5.pcd  view6.pcd  view7.pcd  view8.pcd  view9.pcd
data/model_data/banana (1)/: complete_model.pcd  feature_utilities.csv  global_features.pcd  graph.csv  normal_utilities.csv  view_utilities.csv
data/model_data/banana (1)/distinguish_utilities/: banana (另一个复件)_distinguish_utilities.csv  banana_distinguish_utilities.csv  bun_zipper_distinguish_utilities.csv  joystick_distinguish_utilities.csv  obj_000001_distinguish_utilities.csv  obj_000010_distinguish_utilities.csv
data/model_data/banana (1)/local_features/: view0.pcd  view1.pcd  view10.pcd  view11.pcd  view12.pcd  view13.pcd  view14.pcd  view15.pcd  view16.pcd  view17.pcd  view18.pcd  view19.pcd  view2.pcd  view20.pcd  view21.pcd  (+65 more)
data/model_data/bun_zipper/: complete_model.pcd  feature_utilities.csv  global_features.pcd  graph.csv  normal_utilities.csv  view_utilities.csv
data/model_data/joystick/: complete_model.pcd  global_features.pcd  graph.csv  view_utilities.csv
data/model_data/joystick_pi_4/: complete_model.pcd  feature_utilities.csv  global_features.pcd  graph.csv  normal_utilities.csv  relative_matrix.txt  view_utilities.csv
data/model_data/obj_000001/: complete_model.pcd  global_features.pcd  graph.csv  view_utilities.csv
data/model_data/obj_000010/: complete_model.pcd  global_features.pcd  graph.csv  relative_matrix.txt  view_utilities.csv
include/: DataProcessor.hpp  GlobalCorrespondence.h  Matching.h  ModelDataStructure.h  Optimization.h  Result.h  SceneDataStructure.h  access_model_data.h  bug_header.h  config_reader.h  ga_objective.hpp  parameters.h  sample_consensus_prerejective.h  sample_consensus_prerejective.hpp
include/add_model/: render_synthetic_views.h  render_views_tesselated_sphere_modified.h
include/match/: LocalPipe.h
include/view_graph/: view_graph.h
python_tool/: draw_plot_2d.py
result/: README.md  candidate.txt  fine_icp.txt  genes_range.txt  output.txt  pure_GA.txt  pure_icp.txt  report.txt
result/banana/: GA_icp.txt  pure_GA.txt  pure_icp.txt  report.txt  report_mutate_by_chromosomes.txt  report_non_uniform.txt  report_uniform.txt  time.txt
result/banana/fitness/: hard_code_inlier_fraction.txt  no_hard_code.txt
result/banana/mutation/: mutate_by_chromosomes.txt  non_uniform.txt  uniform.txt
result/banana/population_global/: 100.txt  110.txt  120.txt  130.txt  140.txt  150.txt  160.txt  170.txt  180.txt  190.txt  200.txt  50.txt  60.txt  70.txt  80.txt  90.txt
result/banana/population_local/: 100.txt  110.txt  120.txt  130.txt  140.txt  150.txt  160.txt  170.txt  180.txt  190.txt  200.txt  50.txt  60.txt  70.txt  80.txt  90.txt
result/banana/register_method/: fine_icp_path_mutate_by_chromosomes.txt  fine_icp_path_non_uniform.txt  fine_icp_path_uniform.txt  pure_GA_mutate_by_chromosomes.txt  pure_GA_non_uniform.txt  pure_GA_uniform.txt  pure_icp.txt
result/banana/set_threads/: false.txt  true.txt
result/joystick/: GA_icp.txt  pure_GA.txt  pure_icp.txt  report.txt  time.txt
script/: is_globalPipeline_exist.sh  is_localPipeline_exist.sh  run_joystick_scene1_fine_registration.sh  run_joystick_scene1_whole_pipeline.sh  run_joystick_scene2_whole_pipeline.sh  run_loop.sh  run_loop_F0.sh  run_loop_dynamic_thread.sh  run_loop_fine_registration.sh  run_loop_fitness.sh  run_loop_mutation_method.sh  run_loop_population_global.sh  run_loop_population_local.sh  run_loop_real_local_banana_dynamic_fusion.sh  run_loop_real_local_banana_mutation_method.sh  run_loop_scene_banana.sh  run_loop_set_threads.sh  run_loop_sim_local_banana_dynamic_fusion.sh  run_loop_sim_local_banana_mutation_method.sh  run_loop_sim_local_joystick_mutation_method.sh  run_loop_whole_pipeline.sh  run_loop_whole_pipeline_and_fine_registration.sh  run_offline_data_generation.sh
src/: DataProcessor.cpp  GlobalCorrespondence.cpp  Matching.cpp  Optimization.cpp  access_model_data.cpp  bug_src.cpp  config_reader.cpp  ga_objective.cpp  parameters.cpp
src/match/: LocalPipe.cpp
src/view_graph/: view_graph.cpp
test/: Test.cpp  Test.h  bug_test.cpp  bug_test2.cpp  check_results.cpp  check_view_graph.cpp  data_process.cpp  point_pick.cpp  show_candidate.cpp  sophus_average.cpp
(+1964 files in other folders)
